# foocat3

./: CONTRIBUTING.md  README.md  pyproject.toml  setup.cfg
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
foocat3/: foocat3.py
tests/: test_foocat3.py
